Parser.cpp
#include "pch.h"

CParser::CParser()
{
	m_Phase = PHASE::NONE;
	m_pLex = 0;
	m_Processor = Processor::R6502;
	m_pCurrentSection = 0;
	m_Recursion = 0;
	m_Bump = 0;
	LookaHeadToken = Token(0);
}

CParser::~CParser()
{
	if (m_pLex)
		delete m_pLex;
}

bool CParser::Create()
{
	bool rV = true;
	m_pLex = new CLexer;
	m_pLex->Create();
	GetAstTree()->Create();

	if (LogFile())
		fprintf(LogFile(), "Parser Created\n");
	
	return true;
}

FILE* CParser::LogFile()
{
	return Act()->LogFile();
}

CAstNode* CParser::Run()
{
	//-------------------------------------
	// Run
	// Run the parser and catch exceptions
	//-------------------------------------
	CAct65ROOT* pRoot = 0;
	CAstNode* pN = 0;
	FILE* ErrorDest = 0;

	if (LogFile())
		ErrorDest = LogFile();
	else
		ErrorDest = stderr;
	try {
		pRoot = (CAct65ROOT*)GetAstTree()->GetRootNode();
		pRoot = new CAct65ROOT;
		pRoot->Create();
		GetAstTree()->SetRootNode(pRoot);
		LookaHeadToken = GetLexer()->Lex();
		pN = Action65();
		pRoot->SetChild(pN);
		GetAstTree()->Print(LogFile());
		GetAstTree()->Process();	//gemerate cpde
//		GetCurrentSection()->Print(LogFile());
//		GetLexer()->GetSymTab()->PrintTable(LogFile());
		fprintf(stderr, "Lines Compiled:%d\n", GetLexer()->GetLineNumber());
		fprintf(LogFile(), "Lines Compiled:%d\n", GetLexer()->GetLineNumber());
	}
	catch (Exception& BooBoo)
	{
		char* s = new char[256];
		Exception::ExceptionType ExcptType;

		ExcptType = BooBoo.GetXCeptType();
		switch (ExcptType)
		{
		case Exception::ExceptionType::WHOKNOWS:
			fprintf(ErrorDest,
				"%s Line=%d  Col=%d\n",
				BooBoo.GetExceptionTypeString(BooBoo.GetXCeptType()),
				GetLexer()->GetLineNumber(),
				GetLexer()->GetColunm()
			);
			break;
		case Exception::ExceptionType::UNEXPECTED_TOKEN:
			fprintf(ErrorDest,
				"%s %d:%s  Line:%d Col:%d\n",
				BooBoo.GetExceptionTypeString(BooBoo.GetXCeptType()),
				int(BooBoo.GetGotToken()),
				GetLexer()->LookupToName(BooBoo.GetGotToken()),
				GetLexer()->GetLineNumber(),
				GetLexer()->GetColunm()
			);
			break;
		case Exception::ExceptionType::EXPECTED_PROC_FUNC_INTERRUPT:
			fprintf(ErrorDest,
				"%s %d:%s\n",
				BooBoo.GetExceptionTypeString(BooBoo.GetXCeptType()),
				int(BooBoo.GetGotToken()),
				GetLexer()->LookupToName(BooBoo.GetGotToken())
			);
			break;
		case Exception::ExceptionType::EXPECTED_INDEX_REG:
			fprintf(ErrorDest,
				"%s %d:%s  Line:%d Col:%d\n",
				BooBoo.GetExceptionTypeString(BooBoo.GetXCeptType()),
				int(BooBoo.GetGotToken()),
				GetLexer()->LookupToName(BooBoo.GetGotToken()),
				GetLexer()->GetLineNumber(),
				GetLexer()->GetColunm()
			);
			break;
		case Exception::ExceptionType::SECTION_ADDRES_RANGE_EXCEEDED:
			fprintf(ErrorDest,
				"Section:Address Range Exceeded %d:%s\n%s\n  Line:%d Col:%d\n",
				int(BooBoo.GetGotToken()),
				GetLexer()->LookupToName(BooBoo.GetGotToken()),
				BooBoo.GetErrorString(),
				GetLexer()->GetLineNumber(),
				GetLexer()->GetColunm()
			);
			break;
		case Exception::ExceptionType::SECTION_UNDEFINED:
			fprintf(ErrorDest,
				"Section Undefined %d:%s  Line:%d Col:%d\n",
				int(BooBoo.GetGotToken()),
				GetLexer()->LookupToName(BooBoo.GetGotToken()),
				GetLexer()->GetLineNumber(),
				GetLexer()->GetColunm()
			);
			break;
		case Exception::ExceptionType::NOSECTION_DEFINED:
			fprintf(ErrorDest,
				"No Section Defined %d:%s  Line:%d Col:%d\n",
				int(BooBoo.GetGotToken()),
				GetLexer()->LookupToName(BooBoo.GetGotToken()),
				GetLexer()->GetLineNumber(),
				GetLexer()->GetColunm()
			);
			break;
		case Exception::ExceptionType::LEXER_STUMPTED:
			fprintf(
				ErrorDest,
				"%s",
				BooBoo.GetErrorString()
			);
			break;
		case Exception::ExceptionType::ILLEGAL_ADDRESSING_MODE:
			fprintf(ErrorDest,
				"%s",
				BooBoo.GetErrorString()
			);
			break;
		case Exception::ExceptionType::INTERNAL_ERROR:
			fprintf(
				ErrorDest,
				"Internal Error:%s Line:%d  Col:%d\n",
				BooBoo.GetErrorString(),
				GetLexer()->GetLineNumber(),
				GetLexer()->GetColunm()
			);
			break;
		case Exception::ExceptionType::STACK:
			fprintf(
				ErrorDest,
				"Error:%s\n",
				BooBoo.GetErrorString()
			);
			break;
		case Exception::ExceptionType::EXPECTED_IDENT:
			fprintf(
				ErrorDest,
				"Error:%s\n",
				BooBoo.GetErrorString()
			);
			break;
		default:
			fprintf(ErrorDest, "Unknown Exception\n");
			break;
		}
		Act()->CloseAll();
		Act()->Exit(1);
	}
	return pRoot;
}


//**********************************************
// Expect
//
// This function is used to check that we get
// the token that we Expect.
//
// parameters:
//	Lookahead..Current lookahead token
//	token....this is the token we Expect
// return value:
//	reutns the next Lookahead token (>0)
//	reutnrs 0 or negative if we did not get what we Expected
//*********************************************

void CParser::Expect(Token Expected)
{
	char* pExpectedToken = 0;
	char* pLookaheadToken = 0;
	int number = 0;

	//if (LogFile())
	//{
	//	switch (LookaHeadToken.GetToken())
	//	{
	//	case Token::IDENT:
	//		pLookaheadToken = GetLexer()->GetLexSymbol()->GetName();
	//		if (LookaHeadToken.GetToken() == Expected)
	//		{
	//			pExpectedToken = pLookaheadToken;
	//		}
	//		else
	//			pExpectedToken = (char*)"Unexpected";
	//		fprintf(LogFile(), "%d::Expected CLHead: %s  Lookahead = %s Line:%d\n",
	//			m_Recursion,
	//			pExpectedToken,
	//			pLookaheadToken,
	//			GetLexer()->GetLineNumber()
	//		);
	//		break;
	//	case Token::NUMBER:
	//		number = GetLexer()->GetLexValue();
	//		pExpectedToken = (char*)GetLexer()->LookupToName(Expected);
	//		fprintf(LogFile(), "%d::Expected CLHead: %s  Lookahead = %d Line:%d\n",
	//			m_Recursion,
	//			pExpectedToken,
	//			number,
	//			GetLexer()->GetLineNumber()
	//		);
	//		break;
	//	default:
	//		pLookaheadToken = (char*)GetLexer()->LookupToName(LookaHeadToken.GetToken());
	//		pExpectedToken = (char*)GetLexer()->LookupToName(Expected);
	//		fprintf(LogFile(), "%d::Expected CLHead: %s  LookaHeadToken = %s Line:%d\n",
	//			m_Recursion,
	//			pExpectedToken,
	//			pLookaheadToken,
	//			GetLexer()->GetLineNumber()
	//		);
	//		break;
	//	}
	//}
	if (Accept(Expected))
		LookaHeadToken = GetLexer()->Lex();
	else
	{
		ThrownException.SetXCeptType(Exception::ExceptionType::UNEXPECTED_TOKEN);
		sprintf_s(
			ThrownException.GetErrorString(),
			ThrownException.GetMaxStringLen(),
			"Line %d: Unexpected CLHead:Got %d Expected %d\n",
			GetLexer()->GetLineNumber(),
			(int)LookaHeadToken,
			Expected
		);
		throw(ThrownException);
	}
}

//********************************************
// Accept
//
// This function compares the token you want
// versus the token that is current.  If they
// match, then we get another token.
// If not, then just return.
//
// parameter:
//	Lookahead..The current lookahead token
//	token.....this is the token we want
//
// return value:
//	returns the new token value (>0)
//	returns 0 or negative if we don't get the token we want
//**********************************************

bool CParser::Accept(Token Expected)
{
	bool rv = false;

	if (Expected == LookaHeadToken)
		rv = true;
	return rv;
}


//---------------------------------
// Parsing Methods
//---------------------------------
// Program Structure
//---------------------------------

CAstNode* CParser::Action65()
{
	//--------------------------------------------
	//	Action65->Modules;
	//--------------------------------------------
	CAstNode* pNode;

	pNode = Modules();
	return pNode;
}

CAstNode* CParser::Modules()
{
	//--------------------------------------------
	//	Modules		->Set Modules_1;
	//	Modules_1	-> 'MODULE' Set Modules_1
	//				-> .
	//				;
	//--------------------------------------------
	bool Loop = true;
	CAstNode* pN = 0;
	CAstNode* pNext = 0, *pChild = 0;

	pNext = Set();
	while (Loop)
	{
		switch (LookaHeadToken)
		{
		case Token::MODULE:
			Expect(Token::MODULE);
			pN = new CAct65Module;
			pChild = Set();
			pChild = pN->SetChild(pChild);
			pNext = CAstNode::MakeNextList(pNext, pChild);
			//---------------------------------------
			pChild = Set();
			pNext = CAstNode::MakeNextList(pNext, pChild);
			break;
		case Token::EOL:
			Loop = false;
			break;
		default:
			Loop = false;
			break;
		}
	}
	return pNext;
}

//--------------------------------------------
// SET compiler directive.  Used to set 
// various attributes of the compile.
//--------------------------------------------


CAstNode* CParser::Set()
{
	//--------------------------------------------
	//	Set		->SysDecl Set_1;
	//	Set_1	-> 'SET' SetObjects SysDecl Set_1
	//			-> .
	//			;
	//--------------------------------------------
	bool Loop = true;
	CAstNode* pNext = 0, *pChild = 0;

	pNext = SysDecl();
	while (Loop)
	{
		switch (LookaHeadToken)
		{
		case Token::SET:
			Expect(Token::SET);
			SetObjects();
			//---------------------------------
			pChild = SysDecl();
			pNext = CAstNode::MakeNextList(pNext, pChild);
			break;
		default:
			Loop = false;
			break;
		}
	}
	return pNext;
}

void CParser::SetObjects()
{
	//--------------------------------------------
	//	SetObjects	-> 'SECTION' SetSectionName
	//				-> .
	//				;
	//--------------------------------------------

	switch (LookaHeadToken)
	{
	case Token::SECTION:
		Expect(Token::SECTION);
		SetSectionName();
		break;
	default:
		break;
	}
}

void CParser::SetSectionName()
{
	//--------------------------------------------
	//	SetSectionName		-> 'SECTION_NAME';
	//--------------------------------------------
	CSection* pSection = 0;

	switch (LookaHeadToken)
	{
	case Token::SECTION_NAME:
		pSection = GetLexer()->GetLexSection();
		Expect(Token::SECTION_NAME);
		SetCurrentSection(pSection);
		break;
	default:
		break;
	}
}

//------------------------------------------
// Statements
//------------------------------------------


CAstNode* CParser::Statements()
{
	CAstNode* pN = 0;
	CAstNode* pNext = 0, * pChild = 0;
	bool Loop = true;

	pN = new CAct65Statements;
	pChild = Call();
	pN->SetChild(pChild);
	return pN;
}

//------------------------------------------
// Proceedure Calls
//------------------------------------------

CAstNode* CParser::Call()
{
	//--------------------------------------------
	//	Call	->ForStmt ProcCall_1;
	//	ProcCall_1	-> 'PROC_IDENT' ProcParams ForStmt ProcCall_1
	//				-> 'FUNC_IDENT' ProcParams ForStmt ProcCall_1
	//				-> .
	//				;
	//--------------------------------------------
	bool Loop = true;
	CAstNode* pN = 0;
	CAstNode* pNext = 0, *pChild = 0;

	pNext = ForStmt();
	while (Loop)
	{
		switch (LookaHeadToken)
		{
		case Token::PROC_IDENT:
			Expect(Token::PROC_IDENT);
			pN = new CAct65ProcCall;
			pChild = ProcParams();
			pN->SetChild(pChild);
			pNext = CAstNode::MakeNextList(pNext, pN);
			//--------------------------------------------
			pChild = ForStmt();
			pNext = CAstNode::MakeNextList(pChild, pN);
			break;
		case Token::FUNC_IDENT:
			Expect(Token::FUNC_IDENT);
			pN = new CAct65FuncCall;
			pChild = ProcParams();
			pN->SetChild(pChild);
			pNext = CAstNode::MakeNextList(pNext, pN);
			//--------------------------------------------
			pChild = ForStmt();
			pNext = CAstNode::MakeNextList(pNext, pChild);
			break;
		default:
			Loop = false;
			break;
		}
	}
	return pNext;
}

CAstNode* CParser::ProcParams()
{
	//--------------------------------------------
	//	ProcParams		->ProcParamsEnd ProcParams_1;
	//	ProcParams_1	->	'(' ProcParamsEnd
	//					-> .
	//					;
	//--------------------------------------------
	CAstNode* pN = 0;
	CAstNode* pNext = 0, *pChild = 0;

	pNext = ProcParamsEnd();
	switch (LookaHeadToken)
	{
	case Token('('):
		Expect(Token('('));
		pN = new CAct65FuncCall;
		pChild = ProcParams();
		pN->MakeNode(pChild,pNext);
		Expect(Token(')'));
		break;
	default:
		break;
	}
	return pNext;
}

CAstNode* CParser::ProcParamsEnd()
{
	//--------------------------------------------
	//	ProcParamsEnd	->ValueList ProcParamsEnd_1;
	//	ProcParamsEnd_1	-> ')'
	//					;
	//--------------------------------------------
	CAstNode* pN = 0;
	CAstNode* pNext = 0;

	pNext = ValueList();
	switch (LookaHeadToken)
	{
	case Token(')'):
		Expect(Token(')'));
		break;
	default:
		break;
	}
	return pNext;
}

//------------------------------------------------
// FOR statement
//------------------------------------------------

CAstNode* CParser::ForStmt()
{
	//--------------------------------------------
	//	ForStmt		-> IfStmt ForStmt_1;
	//	ForStmt_1	-> 'FOR' ForDOend IfStmt ForStmt_1
	//				-> .
	//				;
	//--------------------------------------------
	bool Loop = true;
	CAstNode* pN = 0;
	CAstNode* pNext = 0, *pChild = 0;

	pNext = IfStmt();
	while (Loop)
	{
		switch (LookaHeadToken)
		{
		case Token::FOR:
			Expect(Token::FOR);
			pN = new CAct65FOR;;
			pChild = ForDOendOD();
			pN->SetChild(pChild);
			pNext = CAstNode::MakeNextList(pNext, pN);
			//-------------------------------------------------
			pChild = IfStmt();
			pNext = CAstNode::MakeNextList(pNext, pChild);
			break;
		default:
			Loop = false;
			break;
		}
	}
	return pNext;
}

CAstNode* CParser::ForDOendOD()
{
	//--------------------------------------------
	//	ForDOend->STEPoption ForDOend_1;
	//	ForDOend_1		-> 'DO' Statements
	//	-> 'OD';
	//--------------------------------------------
	CAstNode* pNOD = 0;
	CAstNode* pNDO = 0;
	CAstNode* pStatements = 0;
	CAstNode* pNext = 0;

	pNext = STEPoption();
	switch (LookaHeadToken)
	{
	case Token::DO:
		Expect(Token::DO);
		pNDO = new CAct65DO;
		pNOD = new CAct65OD;
		pStatements = Statements();
		pNDO = CAstNode::MakeChildList(pNDO, pStatements);
		pNDO = CAstNode::MakeChildList(pNDO, pNOD);
		pNext = CAstNode::MakeNextList(pNext, pNDO);
		Expect(Token::OD);
		break;
	default:
		break;
	}
	return pNext;;
}

CAstNode* CParser::STEPoption()
{
	//--------------------------------------------
	//	STEPoption	->ForTO STEPoption_1;
	//	STEPoption_1-> 'STEP' ArithExpr
	//				-> .
	//				;
	//--------------------------------------------
	CAstNode* pNTO = 0;
	CAstNode* pNStep = 0;
	CAstNode* pNArithExpr = 0;

	pNTO = ForTO();
	switch (LookaHeadToken)
	{
	case Token::STEP:
		Expect(Token::STEP);
		pNArithExpr = ArithExpr();
		pNStep = new CAct65ForSTEP;
		pNStep->SetChild(pNArithExpr);
		pNTO = CAstNode::MakeNextList(pNTO, pNStep);
		break;
	default:
		break;
	}
	return pNTO;
}

CAstNode* CParser::ForTO()
{
	//--------------------------------------------
	//	ForTO	->Itterrator ForTO_1;
	//	ForTO_1	-> 'TO' ArithExpr
	//			;
	//--------------------------------------------
	CAstNode* pItterator = 0;
	CAstNode* pNTO = 0;
	CAstNode* pArithExpr = 0;

	pItterator = Itterrator();
	switch (LookaHeadToken)
	{
	case Token::TO:
		Expect(Token::TO);
		pNTO = new CAct65ForTO;
		pArithExpr = ArithExpr();
		pNTO->SetChild(pArithExpr);
		pItterator = CAstNode::MakeNextList(pItterator, pNTO);
		break;
	default:
		break;
	}
	return pItterator;
}

CAstNode* CParser::Itterrator()
{
	//--------------------------------------------
	//	Itterrator		->MemoryValue Itterrator_1;
	//	Itterrator_1	-> '=' ArithExpr
	//					;
	//--------------------------------------------
	CAstNode* pMemoryValue = 0;
	CAstNode* pArithExpr = 0;

	pMemoryValue = MemoryValue();
	switch (LookaHeadToken)
	{
	case Token('='):
		Expect(Token('='));
		pArithExpr = ArithExpr();
		pMemoryValue->SetChild(pArithExpr);
		break;
	default:
		break;
	}
	return pMemoryValue;
}

//-----------------------------------------------
// If Statement
//-----------------------------------------------

CAstNode* CParser::IfStmt()
{
	//--------------------------------------------
	//	IfStmt		-> WhileStmt IfStmt_1;
	//	IfStmt_1	-> 'IF' EndIF WhileStmt IfStmt_1
	//				-> .
	//				;
	//--------------------------------------------
	// I am going to be little naughty here
	// I am going to create a new type of NODE
	// called CAct65Conditional that will, I
	// hope, make the code a little cleaner
	//--------------------------------------------
	bool Loop = true;
	CAstNode* pN= 0;
	CAstNode* pNext = 0, *pChild = 0;

	pNext = WhileStmt();
	while (Loop)
	{
		switch (LookaHeadToken)
		{
		case Token::IF:
			Expect(Token::IF);
			pN = new CAct65IF;
			pChild = EndIF();
			pN->SetChild(pChild);
			pNext = CAstNode::MakeNextList(pNext, pN);
			//-------------------------------------------
			pChild = WhileStmt();
			pNext = CAstNode::MakeNextList(pNext, pChild);
			break;
		default:
			Loop = false;
			break;
		}
	}
	return pNext;
}

CAstNode* CParser::EndIF()
{
	//--------------------------------------------
	//	EndIF	->ElsePart EndIF_1;
	//	EndIF_1	-> 'FI';
	//--------------------------------------------
	CAstNode* pElsePart = 0;
	CAstNode* pNFI = 0;

	pElsePart = ElsePart();
	switch (LookaHeadToken)
	{
	case Token::FI:
		Expect(Token::FI);
		pNFI = new CAct65FI;
		pElsePart = CAstNode::MakeNextList(pElsePart, pNFI);
		break;
	default:
		break;
	}
	return pElsePart;
}

CAstNode* CParser::ElsePart()
{
	//--------------------------------------------
	//	ElsePart	->ElseIfPart ElsePart_1;
	//	ElsePart_1	-> 'ELSE' Statements
	//				-> .
	//				;
	//--------------------------------------------
	CAstNode* pElseIfPart = 0;
	CAstNode* pNElse = 0;
	CAstNode* pStatements = 0;

	pElseIfPart = ElseIfPart();
	switch (LookaHeadToken)
	{
	case Token::ELSE:
		Expect(Token::ELSE);
		pStatements = Statements();
		pNElse = new CAct65ELSE;
		pNElse->SetChild(pStatements);
		pElseIfPart = CAstNode::MakeNextList(pElseIfPart, pNElse);
		break;
	default:
		break;
	}
	return pElseIfPart;
}

CAstNode* CParser::ElseIfPart()
{
	//--------------------------------------------
	//	ElseIfPart		->ThenPart ElseIfPart_1;
	//	ElseIfPart_1	-> 'ELSEIF' ThenPart ElseIfPart_1
	//					-> .
	//					;
	//--------------------------------------------
	CAstNode* pNThenPart = 0;
	CAstNode* pNELSEIF = 0;
	CAstNode* pN;
	bool Loop = true;
